--- a/css/reset.css
+++ b/css/reset.css
@@ -115,7 +115,7 @@ img {
 }
 
 body {
-  font-family: "roboto" s;
+  font-family: "roboto";
   font-size: 16px;
   --color-dark-blue-500: #094067;
   --color-white: #ffffff;
